--- a/coding/index.html
+++ b/coding/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="bg-red-300 p-px" >
+    <div class="bg-red-300 animate-bounce" >
         Hello World 
     </div>
 </body>
