--- a/coding/foodapp/index2.html
+++ b/coding/foodapp/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css"/>
 <body>
     <div id="nav"></div>
     <h1>Home</h1>
@@ -15,7 +15,7 @@
 </body>
 </html>
 <script type="module">
-    import navbar from "./componentss/navbar.js";
+    import navbar from "./components/navbar.js";
  let navbar_div=document.getElementById("nav");
  navbar_div.innerHTML=navbar();
 
