--- a/coding/foodapp/index2.html
+++ b/coding/foodapp/index2.html
@@ -16,6 +16,7 @@
 </html>
 <script type="module">
     import navbar from "./components/navbar.js";
+    import {getData,append} from "./components/Showdata.js";
  let navbar_div=document.getElementById("nav");
  navbar_div.innerHTML=navbar();
 
