--- a/coding/foodapp/menu.html
+++ b/coding/foodapp/menu.html
@@ -16,11 +16,11 @@
 </html>
 <script type="module">
     import navbar from "./components/navbar.js";
-
+    import {getData,append} from "./components/Showdata.js";
     let navbar_div=document.getElementById("nav");
  navbar_div.innerHTML=navbar();
     
-    let response=getData(`https://www.themealdb.com/api/json/v1/1/random.php`);
+    let response=getData(`https://www.themealdb.com/api/json/v1/1/random.php`)
     response
     .then((res) =>{
 console.log("res:",res);
